[package]
name = "hmtk"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
rumqttc = "0.24"
thiserror = "2"
color-eyre = "0.6"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bpaf = { version = "0.9", features = ["derive", "color"] }
bytes = "1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
insta = "1.42"
